接口完成，轮播图接口还没做，jwt未接入

--- a/WebRoot/WEB-INF/classes/org/view/VGoods.hbm.xml
+++ b/WebRoot/WEB-INF/classes/org/view/VGoods.hbm.xml
@@ -7,8 +7,8 @@
 <hibernate-mapping>
     <class name="org.view.VGoods" table="v_goods" catalog="tendaehome">
         <composite-id name="id" class="org.view.VGoodsId">
-            <key-property name="id" type="java.lang.Long">
-                <column name="id" />
+            <key-property name="goodsId" type="java.lang.Long">
+                <column name="goods_id" />
             </key-property>
             <key-property name="name" type="java.lang.String">
                 <column name="name" length="200" />
