--- a/src/org/view/VUser.hbm.xml
+++ b/src/org/view/VUser.hbm.xml
@@ -31,6 +31,9 @@
             <key-property name="url" type="java.lang.String">
                 <column name="url" length="237" />
             </key-property>
+            <key-property name="address" type="java.lang.String">
+                <column name="address" length="221" />
+            </key-property>
         </composite-id>
     </class>
 </hibernate-mapping>
