完成了支付宝支付，订单退款（人工）

--- a/WebRoot/WEB-INF/classes/org/view/VOrders.hbm.xml
+++ b/WebRoot/WEB-INF/classes/org/view/VOrders.hbm.xml
@@ -16,6 +16,12 @@
             <key-property name="time" type="java.lang.Long">
                 <column name="time" />
             </key-property>
+            <key-property name="isExport" type="java.lang.Integer">
+                <column name="is_export" />
+            </key-property>
+            <key-property name="payWay" type="java.lang.Integer">
+                <column name="pay_way" />
+            </key-property>
             <key-property name="total" type="java.lang.Double">
                 <column name="total" precision="11" />
             </key-property>
