--- a/src/org/view/VRepairOrder.hbm.xml
+++ b/src/org/view/VRepairOrder.hbm.xml
@@ -34,6 +34,9 @@
             <key-property name="staffId" type="java.lang.String">
                 <column name="staff_id" length="10" />
             </key-property>
+            <key-property name="isRead" type="java.lang.Integer">
+                <column name="is_read" />
+            </key-property>
             <key-property name="state" type="java.lang.String">
                 <column name="state" length="4" />
             </key-property>
