--- a/src/org/view/VGoods.hbm.xml
+++ b/src/org/view/VGoods.hbm.xml
@@ -49,6 +49,9 @@
             <key-property name="actName" type="java.lang.String">
                 <column name="act_name" length="341" />
             </key-property>
+            <key-property name="actMinPrice" type="java.lang.String">
+                <column name="act_min_price" length="341" />
+            </key-property>
             <key-property name="status" type="java.lang.String">
                 <column name="status" length="3" />
             </key-property>
